--- a/students/umienchuk_oksana/project_second_monticello/package.json
+++ b/students/umienchuk_oksana/project_second_monticello/package.json
@@ -35,6 +35,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "slick-carousel": "^1.8.1"
   }
