--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/package.json
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/package.json
@@ -33,5 +33,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.45.1",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2"
   }
 }
