--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/package.json
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/package.json
@@ -35,6 +35,8 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "slick-carousel": "^1.8.1"
   }
 }
