--- a/students/tiselko_iryna/exam_js-module/package.json
+++ b/students/tiselko_iryna/exam_js-module/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "just-validate": "^4.2.0",
     "just-validate-plugin-date": "^1.2.0",
