--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/package.json
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "just-validate": "^4.2.0",
     "lightbox2": "^2.11.4",
     "slick-carousel": "^1.8.1"
   }
