--- a/students/umienchuk_oksana/project_second_monticello/package.json
+++ b/students/umienchuk_oksana/project_second_monticello/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "just-validate": "^4.2.0",
     "lightbox2": "^2.11.4",
     "slick-carousel": "^1.8.1"
   }
