--- a/students/tiselko_iryna/exam_js-module/package.json
+++ b/students/tiselko_iryna/exam_js-module/package.json
@@ -35,12 +35,12 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.24",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.1",
     "jquery": "^3.7.1",
     "just-validate": "^4.2.0",
     "just-validate-plugin-date": "^1.2.0",
-    "lightbox2": "^2.11.4",
     "slick-carousel": "^1.8.1"
   }
 }
