--- a/students/savchak_marharyta/exam_2/package.json
+++ b/students/savchak_marharyta/exam_2/package.json
@@ -33,5 +33,12 @@
     "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.45.1",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "@fancyapps/ui": "^5.0.28",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "just-validate": "^4.3.0",
+    "slick-carousel": "^1.8.1"
   }
 }
