--- a/students/kukuruza_maxim/exam-2/package.json
+++ b/students/kukuruza_maxim/exam-2/package.json
@@ -17,11 +17,11 @@
     "IE 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
-    "core-js": "^3.20.2",
+    "core-js": "^3.33.3",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -35,7 +35,10 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "gulp-cli": "^2.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-sourcemaps": "^3.0.0",
     "progress-webpack-plugin": "^1.0.16"
   }
 }
