--- a/students/kukuruza_maxim/exam-2/package.json
+++ b/students/kukuruza_maxim/exam-2/package.json
@@ -39,7 +39,10 @@
     "gulp-cli": "^2.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-sourcemaps": "^3.0.0",
+    "jquery": "^3.7.1",
     "just-validate": "^4.3.0",
-    "progress-webpack-plugin": "^1.0.16"
+    "progress-webpack-plugin": "^1.0.16",
+    "slick-carousel": "^1.8.1",
+    "lightbox2": "^2.11.4"
   }
 }
